compilateurDeca/src/test/deca/context/valid/objet/passe1_2/P2_covariance_valide.deca
// Test de la Passe 2 : Redéfinition avec covariance du type de retour
class A {
    A get() {
        return null;
    }
}

class B extends A {
    // Valide : B est un sous-type de A
    B get() {
        return null;
    }
}
{
}

